# CPP2---Project-1

./: CMakeLists.txt  CandidateList.cpp  CandidateList.h  CandidateType.cpp  CandidateType.h  InputHandler.h  Main.cpp  PersonType.cpp  PersonType.h  Project.vcxproj  Project.vcxproj.filters  README.md  candidates_data.txt
Debug/: vc120.idb
Debug/Project.tlog/: CL.read.1.tlog  CL.write.1.tlog  Project.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
